--- a/package.json
+++ b/package.json
@@ -5,19 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "budo . -d --serve bundle.js --live",
-    "build": "browserify . -o bundle.js -g uglifyify",
+    "pub": "node build.js && git push origin master",
+    "build": "node build.js && browserify . -o bundle.js -g uglifyify",
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'"
   },
   "browserify": {
     "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2040"
-          ]
-        }
-      ]
+      "es2040"
     ]
   },
   "repository": {
@@ -30,12 +24,16 @@
     "url": "https://github.com/data-doge/notes/issues"
   },
   "homepage": "https://github.com/data-doge/notes",
-  "dependencies": {},
+  "dependencies": {
+    "async": "^2.6.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.20.1",
+    "showdown": "^1.8.6"
+  },
   "devDependencies": {
-    "babel-preset-es2040": "^1.1.1",
-    "babelify": "^7.3.0",
     "browserify": "^13.3.0",
     "budo": "^9.4.1",
+    "es2040": "^1.2.6",
     "gh-pages": "^0.12.0",
     "uglifyify": "^3.0.4"
   }
