--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "budo . -d --serve bundle.js --live",
-    "pub": "node build.js && git push origin master",
-    "build": "node build.js && browserify . -o bundle.js -g uglifyify",
+    "log": "node log.js",
+    "pub": "node pub.js",
+    "build": "browserify . -o bundle.js -g uglifyify",
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'"
   },
   "browserify": {
