--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "homepage": "https://github.com/data-doge/notes",
   "dependencies": {
     "async": "^2.6.0",
-    "jquery": "^3.3.1",
     "es2040": "^1.2.6",
+    "jquery": "^3.3.1",
+    "lodash.reverse": "^4.0.1",
+    "lodash.sortby": "^4.7.0",
     "moment": "^2.20.1",
     "showdown": "^1.8.6"
   },
